[package]
name = "vitte-bench-micro"
version = "0.1.0"
edition = "2021"
publish = false

[features]
shims = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "vm_stack"
harness = false

[[bench]]
name = "bytecode_ops"
harness = false

[[bench]]
name = "collections"
harness = false

[[bench]]
name = "channels"
harness = false
