[package]
name = "stdlib"
version = "0.1.0"
description = "Bibliothèque standard du langage Vitte (MVP)."
# Hérite des métadonnées du workspace
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

[lib]
path = "src/lib.rs"

[features]
# std activée par défaut ; désactive-la via --no-default-features si besoin
default = ["std"]
std = []
# Sérialisation optionnelle, relaie vers vitte-core
serde = ["dep:serde", "vitte-core/serde"]

[dependencies]
# Déps communes (versions prises au workspace)
anyhow = { workspace = true }
serde  = { workspace = true, optional = true }

# Déps internes
vitte-core = { path = "../vitte-core" }

[package.metadata.docs.rs]
all-features = true
