[package]
name         = "stdlib"
description  = "Bibliothèque standard du langage Vitte (MVP)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
documentation = "https://vitte-lang.github.io/vitte/docs"
keywords     = ["vitte", "language", "stdlib", "vm", "bytecode"]
categories   = ["development-tools", "compilers"]

[lib]
path = "src/lib.rs"

[features]
# std activée par défaut ; --no-default-features pour no_std
default = ["std"]
std = []
# Sérialisation optionnelle, relaie vers vitte-core
serde = ["dep:serde", "vitte-core/serde"]

[dependencies]
# Internes
vitte-core = { path = "../vitte-core" }

# Externes
serde  = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
