[package]
name        = "vitte-analyzer"
description = "Analyse sémantique du langage Vitte (résolution de noms, typage, vérifications)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-analyzer"

keywords   = ["compiler", "language", "analysis", "vitte"]
categories = ["compilers", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_analyzer"
path = "src/lib.rs"

[features]
# std activée par défaut
default = ["std"]
std     = []

# serde optionnelle
serde = ["dep:serde"]

# full = tout activé
full = ["std", "serde"]

[dependencies]
vitte-ast    = { path = "../vitte-ast" }
vitte-errors = { path = "../vitte-errors" }

serde      = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json        = "1.0"
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all                      = "warn"
pedantic                 = "warn"
nursery                  = "warn"
module_name_repetitions  = "allow"
doc_markdown             = "allow"
too_many_lines           = "allow"
