[package]
name        = "vitte-ansi"
description = "Utilitaires ANSI pour Vitte (couleurs, styles, séquences d’échappement)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-ansi"

keywords   = ["ansi", "terminal", "colors", "cli", "vitte"]
categories = ["command-line-utilities", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_ansi"
path = "src/lib.rs"

[features]
default = ["std"]
std     = []

# support sans couleurs ANSI (fallback texte brut)
no_color = []

# full = tout activé
full = ["std"]

[dependencies]
owo-colors = { workspace = true }

serde      = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json        = "1.0"
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all                      = "warn"
pedantic                 = "warn"
nursery                  = "warn"
module_name_repetitions  = "allow"
doc_markdown             = "allow"
too_many_lines           = "allow"