[package]
name        = "vitte-asm"
description = "Backend assembleur pour Vitte (émission x86_64 / aarch64)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-asm"

keywords   = ["compiler", "assembly", "backend", "vitte"]
categories = ["compilers", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_asm"
path = "src/lib.rs"

[features]
default = ["std"]
std     = []

# option d’export binaire brut
raw = []

# full = tout activé
full = ["std", "raw"]

[dependencies]
vitte-ir     = { path = "../vitte-ir" }
vitte-errors = { path = "../vitte-errors" }

serde      = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json        = "1.0"
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all                      = "warn"
pedantic                 = "warn"
nursery                  = "warn"
module_name_repetitions  = "allow"
doc_markdown             = "allow"
too_many_lines           = "allow"
