[package]
name        = "vitte-asset"
description = "Gestionnaire d’actifs pour Vitte (fichiers, ressources, chargement, cache)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-asset"

keywords   = ["vitte", "assets", "resources", "loader", "cache"]
categories = ["development-tools", "game-engines", "filesystem"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_asset"
path = "src/lib.rs"

[features]
default = ["std"]
std     = []


json    = ["dep:serde", "dep:serde_json"]
toml    = ["dep:serde", "dep:toml"]
yaml    = ["dep:serde", "dep:serde_yaml"]
xml     = ["dep:serde", "dep:quick-xml"]
bin     = ["dep:serde", "dep:bincode"]

# Tout activé
full = ["std", "json", "toml", "yaml", "xml", "bin"]

[dependencies]
serde        = { version = "1.0", features = ["derive"], optional = true }
serde_json   = { version = "1.0", optional = true }
toml         = { version = "0.8", optional = true }
serde_yaml   = { version = "0.9", optional = true }
quick-xml    = { version = "0.36", optional = true }
bincode      = { version = "1.3", optional = true }

thiserror    = "1.0"
parking_lot  = "0.12"
ahash        = "0.8"

[dev-dependencies]
tempfile     = "3.10"
