[package]
name = "vitte-ast"
version = "0.1.0"
edition = "2021"
authors = ["Vincent <ton_email@exemple.com>"]
description = "Abstract Syntax Tree du langage Vitte. Déclarations, expressions, blocs, types avec support serde et no_std."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vitte-lang/vitte"
homepage = "https://vitte-lang.github.io/vitte/"
documentation = "https://docs.rs/vitte-ast"
readme = "README.md"
keywords = ["compiler", "language", "ast", "vitte"]
categories = ["compilers", "data-structures", "no-std"]
exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_ast"
path = "src/lib.rs"

[features]
# std activé par défaut
default = ["std"]

# Active std (alloc est toujours dispo automatiquement en no_std + alloc)
std = []

# Active la sérialisation/désérialisation via Serde
serde = ["dep:serde"]

# Full = toutes les features
full = ["std", "serde"]

[dependencies]
# Serde (optionnel)
serde = { version = "1.0.219", features = ["derive"], optional = true }

# Optionnel : pour debug/pretty-print de l’AST
serde_json = { version = "1.0.143", optional = true }

[dev-dependencies]
# Utile pour tests → snapshot, parsing AST attendu, etc.
serde_json = "1.0.143"
