[package]
name        = "vitte-ast"
description = "Abstract Syntax Tree du langage Vitte. Déclarations, expressions, blocs, types (serde + no_std)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-ast"

keywords   = ["compiler", "language", "ast", "vitte"]
categories = ["compilers", "data-structures"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_ast"
path = "src/lib.rs"

[features]
# std activée par défaut
default = ["std"]
std     = []

# serde optionnelle
serde = ["dep:serde"]

# full = tout
full = ["std", "serde"]

[dependencies]
# hérite de la version du workspace
serde      = { workspace = true, optional = true }

# utile pour dumps/debug (optionnel)
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json        = "1.0"
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all                      = "warn"
pedantic                 = "warn"
nursery                  = "warn"
module_name_repetitions  = "allow"
doc_markdown             = "allow"
too_many_lines           = "allow"
