

[package]
name        = "vitte-autocompletion"
description = "Moteur d’autocomplétion rapide et portable pour CLI, REPL et éditeurs. Fuzzy, préfixe, trie, context rules."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-autocompletion"

keywords   = ["autocomplete", "fuzzy", "cli", "editor", "repl"]
categories = ["command-line-interface", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_autocompletion"
path = "src/lib.rs"

[features]
default = ["std", "fuzzy"]
std     = []
fuzzy   = []
serde   = ["dep:serde"]

[dependencies]
thiserror            = "1.0"
unicode-segmentation = { version = "1", default-features = false }
aho-corasick         = "1"
smallvec             = "1"
bitflags             = "2"
serde                = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json     = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }