[package]
name        = "vitte-autodiff"
description = "Primitives de différenciation automatique pour le langage Vitte."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-autodiff"

keywords   = ["autodiff", "automatic-differentiation", "gradients", "vitte"]
categories = ["science", "mathematics", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_autodiff"
path = "src/lib.rs"

[features]
default = ["std"]
std     = []

# Pour implémentations futures (diff avant/arrière, autodiff symbolique)
forward  = []
reverse  = []
symbolic = []

# Tout activer facilement
full = ["std", "forward", "reverse", "symbolic"]

[dependencies]
