# Nettoyage du fichier après résolution de conflit
[package]
name        = "vitte-autodiff"
version     = "0.1.0"
edition     = "2021"
description = "Automatic differentiation library for the Vitte ecosystem"
license     = "MIT"
repository  = "https://github.com/vitte-lang/vitte"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std     = []

[lib]
name = "vitte_autodiff"
path = "src/lib.rs"
