[package]
name        = "vitte-backend-cranelift"
description = "Backend JIT Cranelift pour Vitte (IR → code natif via cranelift)."

version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

readme        = "README.md"
documentation = "https://docs.rs/vitte-backend-cranelift"

keywords   = ["compiler", "jit", "cranelift", "vitte"]
categories = ["compilers", "development-tools"]

exclude = [".github/*", "examples/*", "tests/*"]

[lib]
name = "vitte_backend_cranelift"
path = "src/lib.rs"

[features]
default = ["std"]
std     = []

# full = toutes les fonctionnalités
full = ["std"]

[dependencies]
vitte-ir     = { path = "../vitte-ir" }
vitte-errors = { path = "../vitte-errors" }

cranelift = "0.111.0"
cranelift-jit = "0.111.0"
cranelift-module = "0.111.0"
cranelift-object = "0.111.0"

serde      = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json        = "1.0"
pretty_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all                      = "warn"
pedantic                 = "warn"
nursery                  = "warn"
module_name_repetitions  = "allow"
doc_markdown             = "allow"
too_many_lines           = "allow"
